[tool.poetry]
name = "auditd-ripper"
version = "0.1.1"
description = ""
authors = ["infosecB <infosecB@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
auditdr = 'auditd_ripper.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
